<resources>
    <string name="app_name">ToDoRa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Better ToDos</string>
    <string name="nav_header_subtitle">you@dcu.ie</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="backlog">Backlog</string>
    <string name="selected">Selected</string>
    <string name="wip">WIP</string>
    <string name="done">Done</string>
    <string name="create">Create</string>
    <string name="debug">Debug</string>
    <string name="project_settings">Project Settings</string>
    <string name="user_name">Name</string>
    <string name="user_email_address">Email Address</string>
    <string name="user_project_url">Jira Subdomain URL</string>
    <string name="user_project_id">Jira Project ID</string>
    <string name="app_settings">App Settings</string>
    <string name="live_update">Live Update</string>
    <string name="backlog_manual">Backlog must be manually refreshed</string>
    <string name="backlog_auto">Backlog will be synced in real time</string>
    <string name="backlog_sync">Backlog Sync</string>
    <string name="user_api_key">Jira API Key</string>

    <!--    Auth pref keys-->
    <string name="prefs_api_key_key">user_api_key</string>
    <string name="prefs_jira_url_key">user_project_url</string>
    <string name="prefs_jira_email">user_email</string>
    <string name="prefs_project_id">user_project_id</string>

    <!--    JQL Query Strings-->
    <string name="jql_query_bcklog">status="Backlog"</string>
    <string name="all">All</string>
    <string name="edit">Edit</string>
    <string name="loading">Loading</string>
    <string name="summary">Summary</string>
    <string name="no_pending_logs">No Pending Time Logs</string>
    <string name="submit_pending_time_logs">Submit Pending Time Logs</string>
    <string name="stop_log">Stop Log</string>
    <string name="pending_timelogs">Pending TimeLogs</string>
    <string name="start_log">Start Log</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="priority">priority</string>
    <string name="description">Description</string>
    <string name="time_tracking_started">Time Tracking Started</string>
    <string name="timelogs_submitted_message">Timelogs submitted (everything deleted really)</string>
    <string name="sample_title">This is the title line. Sometimes it\'s quite large and I</string>
    <string name="sample_description_2_line">This is the second line and I\'m making some long text so I can see some truncation, especially for the super long ones.</string>
    <string name="sample_days_ago">11 Days Ago</string>
    <string name="favourite">Favourite</string>
    <string name="sample_priority">Priorityt</string>
    <string name="seconds">seconds</string>
    <string name="mandatory_settings_message">You need to enter all settings to use this app</string>

</resources>