<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/project_settings"
        app:iconSpaceReserved="false">


        <EditTextPreference
            app:key="user_name"
            app:title="@string/user_name"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:icon="@drawable/preference_name"
            />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="user_email"
            app:title="@string/user_email_address"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/preference_email" />

        <EditTextPreference
            app:key="user_project_url"
            app:title="@string/user_project_url"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:icon="@drawable/preference_url"
            />

        <EditTextPreference
            app:key="user_project_id"
            app:title="@string/user_project_id"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:icon="@drawable/preference_project"
            />

        <EditTextPreference
            app:key="user_api_key"
            app:title="@string/user_api_key"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:icon="@drawable/preference_api_key" />


    </PreferenceCategory>

    <!--    <PreferenceCategory-->
    <!--        app:title="@string/app_settings"-->
    <!--        app:iconSpaceReserved="false">-->

    <!--        <SwitchPreferenceCompat-->
    <!--            app:key="sync"-->
    <!--            app:title="@string/live_update"-->
    <!--            app:iconSpaceReserved="false"/>-->

    <!--        <SwitchPreferenceCompat-->
    <!--            app:dependency="sync"-->
    <!--            app:key="attachment"-->
    <!--            app:iconSpaceReserved="false"-->
    <!--            app:summaryOff="@string/backlog_manual"-->
    <!--            app:summaryOn="@string/backlog_auto"-->
    <!--            app:title="@string/backlog_sync" />-->

    <!--    </PreferenceCategory>-->

</PreferenceScreen>
