<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="TodoRa Nav"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="io.davedavis.todora.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_backlog"
        android:name="io.davedavis.todora.ui.backlog.BacklogFragment"
        android:label="@string/backlog"
        tools:layout="@layout/fragment_backlog" />

    <fragment
        android:id="@+id/nav_create"
        android:name="io.davedavis.todora.ui.create.CreateFragment"
        android:label="@string/create"
        tools:layout="@layout/fragment_create" />

</navigation>