<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="property"
            type="io.davedavis.todora.network.JiraIssue" />
    </data>

<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/issue_priority"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/sample_priority" />
    <!--    android:background = "@drawable/highest"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/issue_summary"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:ellipsize="marquee"
                android:fontFamily="sans-serif"
                android:singleLine="true"
                android:text="@string/sample_title"
                android:textColor="@color/primaryDarkColor"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/issue_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fontFamily="sans-serif"
                android:lines="2"
                android:singleLine="false"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="12sp"
                tools:text="@string/sample_description_2_line" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/issue_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:maxWidth="70dp"
        android:maxLines="1"
        android:text="@string/sample_days_ago"
        android:textColor="@color/secondaryColor"
        android:textSize="12sp" />


    <ImageView
        android:id="@+id/issue_time"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@+id/issue_date"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/primaryLightColor"
        android:contentDescription="@string/favourite"
        android:src="@drawable/list_view_no_time"
        tools:src="@drawable/ic_baseline_access_time_filled_24"
        app:tint="@color/primaryLightColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/primaryDarkColor" />

</RelativeLayout>
</layout>
